styles.css
@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;600&family=Roboto:wght@100;500;700;900&display=swap');




#book-content {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
    grid-template-rows: repeat(auto-fit, minmax(200px, 1fr));
    grid-auto-flow: row;
    grid-auto-rows: minmax(200px, 1fr) ;
    padding-left: 14vw;
    padding-right: 14vw;
    gap: 30px;

}

.card {
    background-color: #393E46;
    border-radius: 6px;
}

#modal {
    display: none;
    position: fixed;
    z-index: 1;
    top: 50%;
    left: 50%;
    margin-right: -50%;
    transform: translate(-50%, -50%);
    width: 60%;
    height: 70%;
    overflow: auto;
    background-color: #EEEEEE;

    
}

#modal form {
    background-color: #EEEEEE;

    width: 100%;
    height: 100%;
}

#submit {
    background-color: #00ADB5;
    font-size: 18px;
    border-radius: 6px;
    font-weight: 700;
    width: 20%;
    height: 25px;
    border: 1px solid honeydew;
}

fieldset {
    border: solid 0px;
    padding: 0px;
    margin: 0px;
    width: 200px;
    height: 100%;

    display: grid;
    justify-content: center;
}



fieldset .legend  {
    font-family: 'Oswald';
    font-weight: 600;
    font-size: 1.5em;
}

fieldset .title #title, fieldset .author #author {
    border: 1px solid black;
    border-radius: 5px;
    width: 80%;
    height: 20px;
    font-family: 'Oswald';
    font-size: 1em;
}




fieldset .pages #pages {
    height: 20px;
    width: 10%;
    font-family: 'Oswald';
    font-size: 1em;
}

